Bring changes from 1.18.2 to 1.19.2